[build-system]
requires = ["setuptools>=61", "pybind11>=2.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tbkpy"
version = "${TBK_VERSION}"
authors = [
    {name = "Mark Huang", email = "hzypp1995@gmail.com"}
]
description = "Turing-zero Bot Kits python wrapper"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
tbkpy = ["tbkpylib.*"]